<resources>
    <string name="app_name">Music</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_search">Cool search</string>
    <string name="nav_saved_music">Saved music</string>
    <string name="nav_current_playlist">Current playlist</string>
    <string name="nav_settings">Settings</string>

    <string name="artist_name_separator" formatted="false">%s - %s</string>

    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_cache_button">Clear</string>
    <string name="settings_repeat_playlist">Repeat playlist</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="name_of_song">Composition</string>
    <string name="search_button_name">Search</string>
</resources>
