<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_current_playlist"
            android:icon="@drawable/ic_playlist_play_black_24dp"
            android:title="@string/nav_current_playlist"/>

        <item
            android:id="@+id/nav_saved_tracks"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/nav_saved_music"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>
    </group>

</menu>
