<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.technotrack.music.view.SearchFragment">


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_author"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:hint="@string/author"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/name_of_song"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_name"
        android:id="@+id/submit_button"
        android:layout_below="@+id/input_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>
